crates/dag-macros/tests/ui/workflow_if_missing_edge.stderr
error: [DAG206] if_! references missing edge `route` -> `else_branch`
  --> tests/ui/workflow_if_missing_edge.rs:37:5
   |
37 |     if_!(
   |     ^^^
